--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@ You must provide either a threshold or a filter to generate meaningful results. 
     const randomTitle = titles[Math.floor(Math.random() * titles.length)];
     console.log(randomMessage, randomTitle);
     const boxHtml = `
-    <div class="hope-title font-bold mb-3 flex items-center gap-2 text-yellow-900 text-xl tracking-wide">🌟 ${randomTitle}</div>
-    <div class="hope-box text-sm text-yellow-900 bg-yellow-50 border border-dashed border-yellow-400 p-3 rounded-md">
+    <div class="hope-title neon-title font-bold mb-3 flex items-center gap-2 text-yellow-900 text-xl tracking-wide">🌟 ${randomTitle}</div>
+    <div class="hope-box neon-box text-sm text-yellow-900 bg-yellow-50 border border-dashed border-yellow-400 p-3 rounded-md">
       ${randomMessage}
     </div>
   
