--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <strong style="color:#5cdb71;">📊 New:</strong> View official <b>Cutoff Merits</b> for each specialty using the <b>Cutoff Dashboard</b> below.
   </div>
 
-  <strong style="color:#5cdb71;">✅ Official Merit List – Round 3 Published!</strong><br>
+  <strong style="color:#5cdb71;">✅ Official Merit List – Round 4 Published!</strong><br>
   Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
   <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view the current applicant's consent status.<br>
   ✨ <span style="color:#7fffa7;"><b>New:</b> "Show Next Candidate"</span> reveals who will be considered next <i>if the current candidate does not give consent</i>. Use it to preview upcoming applicants in line!
@@ -181,6 +181,7 @@
        -->
       
   <div id="hopeBoxContainer" class="hope-highlight"></div>
+  <!--
        <div class="alert merit-desc" style="
   background: #23272a;
   color: #e0e0e0;
@@ -197,7 +198,7 @@
   <br><br>
   <span style="color:#aaa;">You can now click on hospital and speciality name to check individual merit lists.</span>
 </div>
-<div style="margin-top: 2.5em; max-width: 560px;">
+<div style="margin-top: 2.5em; max-width: 560px;">-->
   
 
  <div style="
