--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
        -->
       
   <div id="hopeBoxContainer" class="hope-highlight"></div>
-  <!--
+  
        <div class="alert merit-desc" style="
   background: #23272a;
   color: #e0e0e0;
@@ -192,13 +192,13 @@
   box-shadow: 0 2px 16px 0 rgba(92,219,113,0.07);
   font-size: 1.08em;
 ">
-  <strong>About this Merit List</strong><br>
+  <!--<strong>About this Merit List</strong><br>
   This merit list is compiled from the <span style="color:#5cdb71;font-weight:600;">official gazette</span>. The statistics above show how closely the estimated merit list based on official gazette matches the previously published unofficial merit, including the number of candidates <span style="color:#5cdb71;font-weight:600;">correctly placed</span> in both lists.<br>
   <span style="color:#b5ffcb;">This provides transparency and helps you assess the accuracy of the unofficial data.</span>
   <br><br>
-  <span style="color:#aaa;">You can now click on hospital and speciality name to check individual merit lists.</span>
+  <span style="color:#aaa;">You can now click on hospital and speciality name to check individual merit lists.</span>-->
 </div>
-<div style="margin-top: 2.5em; max-width: 560px;">-->
+<div style="margin-top: 2.5em; max-width: 560px;">
   
 
  <div style="
