--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <strong style="color:#5cdb71;">📊 New:</strong> View official <b>Cutoff Merits</b> for each specialty using the <b>Cutoff Dashboard</b> below.
   </div>
 
-  <strong style="color:#5cdb71;">✅ Official Merit List – Round 4 Published!</strong><br>
+  <strong style="color:#5cdb71;">✅ Official Merit List – Round 5 Published!</strong><br>
   Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
   <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view the current applicant's consent status.<br>
   ✨ <span style="color:#7fffa7;"><b>New:</b> "Show Next Candidate"</span> reveals who will be considered next <i>if the current candidate does not give consent</i>. Use it to preview upcoming applicants in line!
@@ -114,7 +114,7 @@
     box-shadow: 0 0 15px rgba(0, 255, 170, 0.25);
     animation: glowPulse 2s infinite;
   ">
-    <strong style="color:#00ffaa;">📁 Previous Lists</strong><br>
+    <strong style="color:#00ffaa;">📁 Previous Lists now includes 2025 July merit lists too</strong><br>
     <a href="https://prpdatastat.github.io/prp-site/prev.html" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
       🔗 prpdatastat.github.io/prp-site/prev.html
     </a>
