--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a href="index.html">Home</a></li>
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
           <!--<li><a href="speciality.html">Specialities</a></li>-->
-          
+          <li><a href="wasted.html">Wasted Seats</a></li>
           <li><a href="review.html">Training Reviews</a></li>
           <li><a href="cutoff.html">Cutoff Merits</a></li>
           <li><a href="schedule.html">Schedule</a></li>
@@ -91,24 +91,21 @@
 ">
 
   <div style="margin-bottom: 1em; background: #1e1f22; border-left: 4px solid #5cdb71; padding: 0.6em 1em; border-radius: 6px;">
-    <strong style="color:#5cdb71;">📊 New:</strong> View official <b>Cutoff Merits</b> for each specialty using the <b>Cutoff Dashboard</b> below.
+    <strong style="color:#5cdb71;">📊 New:</strong> Explore <b>Cutoff Merits</b> for each specialty in the <b>Cutoff Dashboard</b> below.
   </div>
 
-  <strong style="color:#5cdb71;">✅ Official Merit List – Round 6 Published!</strong><br>
-  Released by the <span style="color:#ffe066; font-weight:600;">official government authority</span>.<br>
-  <span style="color:#5cdb71;"><b>Click "Check Consent"</b></span> to view the current applicant's consent status.<br>
-  ✨ <span style="color:#7fffa7;"><b>New:</b> "Show Next Candidate"</span> reveals who will be considered next <i>if the current candidate does not give consent</i>. Use it to preview upcoming applicants in line!
+  <strong style="color:#5cdb71;">✅ Round 6 Merit List Published!</strong><br>
+  Released by the <span style="color:#ffe066; font-weight:600;">official authority</span>. Use <b>"Check Consent"</b> to verify applicant status.<br>
+  <span style="color:#7fffa7;">✨ <b>Show Next Candidate:</b></span> Preview who’s next if consent is not given.
 
   <br><br>
-  <span style="color:#ffd43b; font-weight:600;">
-    📊 Estimated vs. Official List Accuracy Shown Below
-  </span><br>
-  <span style="color:#aaa;">Includes correct placements and prediction performance.</span>
+
+  <span style="color:#ffd43b; font-weight:600;">📉 New Feature: Wasted Seat Tracker</span><br>
+  <span style="color:#aaa;">See hospitals/specialties where seats were left vacant due to candidates not joining.</span>
 
   <hr style="border-color: rgba(255,255,255,0.1); margin: 1em 0;">
 
   <div style="
-    margin-top: 0.5em;
     padding: 0.7em 1em;
     background: #1e1f22;
     border-left: 4px solid #00ffaa;
@@ -116,14 +113,13 @@
     box-shadow: 0 0 15px rgba(0, 255, 170, 0.25);
     animation: glowPulse 2s infinite;
   ">
-    <strong style="color:#00ffaa;">📁 Previous Lists now includes 2025 July merit lists too</strong><br>
+    <strong style="color:#00ffaa;">📁 July 2025 Lists Added to Archive</strong><br>
     <a href="https://prpdatastat.github.io/prp-site/prev.html" target="_blank" style="color:#ffe066; font-weight:bold; text-decoration:underline;">
       🔗 prpdatastat.github.io/prp-site/prev.html
     </a>
-    <br><br>
-    
   </div>
 </div>
+
 
 
 
