--- a/wasted.html
+++ b/wasted.html
@@ -329,7 +329,7 @@
                 
             let candidate = getCandidatesData(pmdc);
 
-            candBlock += `<span class='nonjoin-item' data-tippy-content='Name: ${candidate.name}<br>PMDC No: ${pmdc}' onmousedown=gotoUrl('https://prpdatastat.github.io/prp-site/candidate.html?pmdcNo=${pmdc})><b>${merit[cand].candidates[c]}</b></span>`
+            candBlock += `<span class='nonjoin-item' data-tippy-content='Name: ${candidate.name}<br>PMDC No: ${pmdc}' onmousedown=gotoUrl('https://prpdatastat.github.io/prp-site/candidate.html?pmdcNo=${pmdc}')><b>${merit[cand].candidates[c]}</b></span>`
             }
             
             }
