2026 induction plus new theme

--- a/chart.html
+++ b/chart.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Merit Trends Graphs | PRP Statistics</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="site-theme.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -171,5 +172,6 @@
 }
     
   </script>
+  <script src="site-theme.js"></script>
 </body>
 </html>
