--- a/schedule.html
+++ b/schedule.html
@@ -15,6 +15,7 @@
 
     <script src="https://cdn.datatables.net/v/dt/jq-3.7.0/dt-2.0.8/r-3.0.2/sl-2.0.3/datatables.min.js"></script>
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="site-theme.css" />
   </head>
   <body>
     <nav class="navbar main-navbar">
@@ -22,6 +23,7 @@
         <div class="logo-container">
           <img class="logo" onclick="gotoUrl()" src="logo.png" />
         </div>
+        <button id="menu-toggle" class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false" style="display:none; border:0; background:transparent; color:var(--muted); font-weight:800; font-size:1.3rem;">☰</button>
         <ul class="nav-links">
           <li><a href="index.html" class="active">Home</a></li>
           <!--<li><a href="hospital.html">Hospitals</a></li>-->
@@ -98,4 +100,5 @@
     }
 
     </script>
+    <script src="site-theme.js"></script>
     </body>
