--- a/upgrade.html
+++ b/upgrade.html
@@ -8,6 +8,7 @@
     
     <script src="https://unpkg.com/sync-fetch"></script> 
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="site-theme.css" />
     
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
@@ -195,5 +196,6 @@
 
 
     </script>
+    <script src="site-theme.js"></script>
   </body>
 </html>
