--- a/candidate.html
+++ b/candidate.html
@@ -41,7 +41,7 @@
     <div class="main_container">
       <div class="info candidate-info-card">
         <div class="candidate-header">
-          <h1 id="name">Ali Tahir</h1>
+          <h1 id="name">Unknown</h1>
           <div class="share-link">
             <button class="icon-btn" onclick="shareUrl()" title="Copy shareable link">
               <img src="share.png" alt="Share" />
@@ -49,8 +49,8 @@
           </div>
         </div>
         <div class="candidate-meta">
-          <span class="meta-item">Applicant ID: <strong id="applicantId">15610</strong></span>
-          <span class="meta-item">PMDC Number: <strong id="pmdcNo">15610</strong></span>
+          <span class="meta-item">Applicant ID: <strong id="applicantId"></strong></span>
+          <span class="meta-item">PMDC Number: <strong id="pmdcNo"></strong></span>
         </div>
         <div class="stat-card aggMarks">
           <div class="stat-number" id="provMarks">29</div>
